--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-marvel-catalog",
   "version": "0.1.0",
+  "homepage": "https://thiagoterleski.github.io/react-marvel-catalog",
   "private": false,
   "author": "thiagoterleski@gmail.com",
   "dependencies": {
@@ -29,6 +30,7 @@
     "file-loader": "0.11.2",
     "firebase": "^4.1.3",
     "fs-extra": "3.0.1",
+    "gh-pages": "^1.0.0",
     "html-webpack-plugin": "2.29.0",
     "install": "^0.10.1",
     "jest": "20.0.4",
@@ -68,7 +70,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
